chore: Update base path and asset prefix for gymbuddy

--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -72,6 +72,10 @@
     left:32vw;
     background-color: #B2675E;
     border-radius: 10px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
     color: #fff;
     font-family: "NTR", sans-serif;
     font-size: 1.2em;
