--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,14 @@ a{
   text-decoration: none;
   color:inherit;
 }
+
+button{
+  cursor: pointer;
+  border: none;
+  background-color: rgba(0,0,0,0);
+  color: #fff;
+  font-family: "NTR", sans-serif;
+  font-size: 1.2em;
+  border-radius: 10px;
+  padding: 10px 20px;
+}
