--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,10 @@
 .mainContainer{
-  height: 100vh;
-  width: 100vw;
+  height: 90vh;
+  width: 96vw;
   display: flex;
+  overflow: hidden !important;
+  overflow-y: hidden !important;
+  overflow-x: hidden !important;
   justify-content: center;
   align-items: center;
   flex-direction: column;
