--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -42,7 +42,7 @@
   align-items: center;
   width: 50vw;
   height: 20vh;
-  margin-top:10vh;
+  margin-top:7vh;
 }
 
 .label{
@@ -78,5 +78,23 @@
     color: #fff;
     font-family: "NTR", sans-serif;
     font-size: 1.2em;
+    border: 0px;
+}
+
+.signupButton{
+    position: relative;
+    width: 40vw;
+    margin-top: 39vh;
+    border-radius: 10px;
+    height: 5vh;
+    border-radius: 10px;
+    background-color: rgba(0,0,0,0);
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: #D4CDC3;
+    font-family: "NTR", sans-serif;
+    font-size: 1em;
     border: 0px;
 }
