--- a/src/app/newSchedule/exerciseList/exerciseList.module.css
+++ b/src/app/newSchedule/exerciseList/exerciseList.module.css
@@ -1,11 +1,15 @@
 .listContainer{
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
     margin-bottom:15vh;
+}
+
+.listContainer.display{
+    display:flex
 }
 
 .exercise{
@@ -43,7 +47,7 @@
 }
 
 .exerciseDescription.expanded{
-    max-height: 110vh;
+    max-height: 220vh;
 }
 
 .exerciseGif{
