--- a/src/app/newSchedule/schedule.module.css
+++ b/src/app/newSchedule/schedule.module.css
@@ -9,22 +9,20 @@
     width: 96vw !important;
 }
 
-.mainContainer.lastStep{
-    overflow-y: hidden !important;
-}
-
 .firstContainer{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute;
+    height: auto;
     top:5vh;
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out, height 0.1s ease-in-out;
 }
 
-.firstContainer.nextStep{
-    transform: translateX(-100%);
+.firstContainer.firstVisibility{
+    transform : translateX(-100%);
+    height: 0;
 }
 
 .formContainer{
@@ -116,23 +114,15 @@
     flex-direction: column;
     justify-content: center;
     top:0;
-    align-items: center;
     height: 0;
-    left:100%;
+    align-items: center;
+    left:200%;
     transition: transform 0.5s ease-in-out, height 0.5s ease-in-out;
 }
 
-.secondContainer.nextStep2{
-    transform: translateX(-103%);    
+.secondContainer.secondVisibility{
+    transform : translateX(-210%);
     height: auto;
-}
-
-.secondContainer.back{
-    transform: translateX(103%);
-}
-
-.secondContainer.lastStep{
-    height: 0;
 }
 
 .nextButton2{
@@ -140,10 +130,16 @@
 }
 
 .subContainer{
+    display: none;
+    
+}
+
+.subContainer.secondVisibility{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: auto;
 }
 
 .bodyPartName{
@@ -208,25 +204,30 @@
     top:0;
     height: 0;
     align-items: center;
-    left:200%;
+    left:350%;
     transition: transform 0.5s ease-in-out, height 0.5s ease-in-out;
 }
 
-.thirdContainer.lastStep{
-    transform: translateX(-230%);    
+.thirdContainer.thirdVisibility{
+    transform : translateX(-410%);
     height: auto;
 }
 
-.secondContainer.nextStep3{
-    transform: translateX(-206%);    
+.subContainer{
     height: 0;
 }
 
-.thirdContainer.back{
-    height: 0;
-    transform: translateX(206%);
+.subContainer.display{
+    height: auto;
 }
 
+.exerciseListContainer{
+    height: 0;
+}
+
+.exerciseListContainer.display{
+    height: auto;
+}
 
 .exerciseName{
     color:#fff;
