--- a/src/app/workout/workout.module.css
+++ b/src/app/workout/workout.module.css
@@ -99,13 +99,20 @@
     margin-top: 5px;
 }
 
+.listButton2{
+    width: 30px;
+    height: 30px;
+}
+
 .previousWorkout{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 3vh;
+    height: 5vh;
+    width: 70vw;
+    margin-left: 5vw;
     font-family: "NTR", sans-serif;
-    font-size: 0.5rem;
-    color:#fff;
+    font-size: 0.7rem;
+    color: B2675E;
 }
