--- a/src/app/workout/schedule/schedule.module.css
+++ b/src/app/workout/schedule/schedule.module.css
@@ -31,7 +31,8 @@
 
 .exerciseName {
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 250;
+  text-align: center;
   margin-bottom: 0;
   font-family: "NTR", sans-serif;
   color: white;
@@ -46,12 +47,14 @@
 
 .stickyDiv {
   position: sticky;
-  top: -0.2vh;
+  top: -7vh;
+  height: 15vh;
   display: flex;
   padding: 1vh;
   width: 100%;
   flex-direction: row;
   background-color: #370909;
+  align-items: flex-end;
   justify-content: flex-end;
 }
 
@@ -61,19 +64,31 @@
   align-items: center;
   width: 15vw;
   border-radius: 15px;
+  margin-right: 10vw;
+  margin-bottom: 3vw;
   height: 5vh;
   background-color: #f8f4e3;
   color: #370909;
   font-family: "NTR", sans-serif;
   font-size: 1.2rem;
   line-height: 120%;
-  margin: 3vw;
 }
 
 .exercise{
     border: 1px solid #B2675E;
     border-radius: 10px;
     margin: 4vh 0;
+    width: 70vw;
     padding: 3vh 2vh;
     background-color: rgba(178, 103, 94, 0.5);
+}
+
+.progressNone{
+    color: #b0afaf;
+    font-family: "NTR", sans-serif;
+    font-size: 1.2rem;
+    font-weight: 100;
+    text-align: center;
+    line-height: 120%;
+    margin: 10px;
 }
