--- a/src/app/workout/workout.module.css
+++ b/src/app/workout/workout.module.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: center;
     width: 96vw;
-    height: 90vh;
 }
 
 .newSchedule{
@@ -83,9 +82,10 @@
     display: flex;
     flex-direction: column;
     width: 80vw;
+    margin-top:5vh;
     height: 40vh;
-    margin-top: 5vh;
     border-radius: 25px;
+    margin-bottom: 15vh;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
     background-color: #F8F4E3
 }
@@ -113,6 +113,23 @@
     width: 70vw;
     margin-left: 5vw;
     font-family: "NTR", sans-serif;
-    font-size: 0.7rem;
+    font-size: 1rem;
     color: B2675E;
+}
+
+.logWorkout{
+    width: 80vw;
+    margin-top:5vh;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logWorkoutButton{
+    color:#fff;
+    font-family: "NTR", sans-serif;
+    font-size: 2.5rem;
+    font-weight: 100;
+    text-align: center;
 }
