--- a/src/app/components/navbar/navbar.module.css
+++ b/src/app/components/navbar/navbar.module.css
@@ -15,6 +15,12 @@
     height: 30px;
 }
 
+.navbarPropic{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+}
+
 .navbarContainer{
     position: relative;
     margin-right: 10vw;
