--- a/src/app/dashBoard/dashboard.module.css
+++ b/src/app/dashBoard/dashboard.module.css
@@ -23,7 +23,7 @@
   margin-top: 5vh;
   width: 80vw;
   padding: 10px;
-  background-color: rgba(178, 103, 94, 0.5);
+  background-color: var(--secondary-lowOpacity-color);
   border-radius: 15px;
   text-align: center;
   color: #fff;
@@ -65,7 +65,7 @@
   padding: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Added shadow */
 margin-bottom: 20vh;
-  background-color: rgba(178, 103, 94, 0.5);
+  background-color: var(--secondary-lowOpacity-color);
   border-radius: 15px;
   line-height: 120%;
   text-align: center;
@@ -89,10 +89,10 @@ margin-bottom: 20vh;
 }
 
 .buttonLogProtein {
-  background-color: rgba(178, 103, 94, 0.5);
+  background-color: var(--secondary-lowOpacity-color);
   border-radius: 15px;
   width: 40vw;
-  border: 1px solid #b2675e;
+  border: 1px solid var(--secondary-color);
   height: 20vh;
   display: flex;
   justify-content: center;
@@ -102,8 +102,8 @@ margin-bottom: 20vh;
 }
 
 .buttonLogWorkout {
-  background-color: rgba(178, 103, 94, 0.5);
-  border: 1px solid #b2675e;
+  background-color: var(--secondary-lowOpacity-color);
+  border: 1px solid var(--secondary-color);
   border-radius: 15px;
   width: 40vw;
   height: 20vh;
@@ -146,7 +146,7 @@ margin-bottom: 20vh;
 .caloriesGoal{
   width: 80vw;
   padding: 10px;
-  background-color: rgba(178, 103, 94, 0.5);
+  background-color: var(--secondary-lowOpacity-color);
   border-radius: 15px;
   text-align: center;
   color: #fff;
@@ -180,7 +180,7 @@ margin-bottom: 20vh;
   padding: 10px;
   border-radius: 15px;
   text-align: center;
-  color: #370909;
+  color: var(--primary-color);
   font-family: "NTR", sans-serif;
   font-size: 1.2rem;
   font-weight: 100;
