--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -11,7 +11,7 @@
     display:none;
     margin-top: 20px;
     letter-spacing: -0.15em;
-    color: #370909;
+    color: var(--primary-color);
     height: 20px;
     font-size: 3em;
     font-family: "NTR", sans-serif;
@@ -20,7 +20,7 @@
 
   .msg{
     display: none;
-    color: #370909;
+    color: var(--primary-color);
     font-size: 2em;
     margin-bottom:70px;
     height: 15px;
@@ -47,7 +47,7 @@
        justify-content: center;
        align-items: center;
        background-color: #F8F4E3;
-       color: #370909;
+       color: var(--primary-color);
        border-radius: 30px;
     }
 
@@ -78,7 +78,7 @@
        align-items: center;
        margin: 0 auto;
        background-color: #F8F4E3;
-       color: #370909;
+       color: var(--primary-color);
        border-radius: 30px;
     }
     
