--- a/src/app/logFood/fetchProduct/fetchProduct.module.css
+++ b/src/app/logFood/fetchProduct/fetchProduct.module.css
@@ -13,14 +13,14 @@
     border-radius: 10px;
     border: 3px solid #fff;
     background-color: rgba(255, 255, 255, 0.5);
-    color: #370909;
+    color: var(--primary-color);
     padding-left: 1vw;
     font-size: 1.2rem;
     font-family: "NTR", sans-serif;
 }
 
 .inputField::placeholder{
-    color: #370909;
+    color: var(--primary-color);
     font-family: "NTR", sans-serif;
     font-size: 1.2rem;
 }
@@ -38,7 +38,7 @@
 }
 
 .productName{
-    color: #370909;
+    color: var(--primary-color);
     font-family: "NTR", sans-serif;
     font-size: 1.2rem;
     width: 70vw;
