--- a/src/app/logFood/logFood.module.css
+++ b/src/app/logFood/logFood.module.css
@@ -76,7 +76,7 @@
     position: relative;
     height: 100%;
     background-color: rgba(255, 255, 255, 1);
-    color: #370909;
+    color: var(--primary-color);
     font-family: "NTR", sans-serif;
     font-size: 1.2rem;
     border: 3px solid #fff;
@@ -90,5 +90,5 @@
 }
 
 .foodCalories {
-    color: #B2675E;
+    color: var(--secondary-color);
 }
