--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -35,10 +35,10 @@
 }
 
 .login{
-  color: #B2675E;
+  color: var(--secondary-color);
 }
 
 .signup{
-  color:#D4CDC3;
+  color:#fff;
   font-size: 1.2rem;
 }
