--- a/src/app/workout/schedule/schedule.module.css
+++ b/src/app/workout/schedule/schedule.module.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 15vh;
   align-items: center;
 }
 
@@ -52,7 +53,7 @@
   padding: 1vh;
   width: 100%;
   flex-direction: row;
-  background-color: #370909;
+  background-color: var(--primary-color);
   align-items: flex-end;
   justify-content: flex-end;
 }
@@ -67,19 +68,19 @@
   margin-bottom: 3vw;
   height: 5vh;
   background-color: #f8f4e3;
-  color: #370909;
+  color: var(--primary-color);
   font-family: "NTR", sans-serif;
   font-size: 1.2rem;
   line-height: 120%;
 }
 
 .exercise{
-    border: 1px solid #B2675E;
+    border: 1px solid var(--secondary-color);
     border-radius: 10px;
     margin: 4vh 0;
     width: 70vw;
     padding: 3vh 2vh;
-    background-color: rgba(178, 103, 94, 0.5);
+    background-color: var(--secondary-lowOpacity-color);
 }
 
 .progressNone{
