--- a/src/app/workout/workout.module.css
+++ b/src/app/workout/workout.module.css
@@ -26,7 +26,7 @@
 }
 
 .savedSchedulesTitle{
-    color:#B2675E;
+    color:var(--secondary-color);
     font-family: "NTR", sans-serif;
     font-size: 1.5rem;
     text-align: center;
@@ -55,7 +55,7 @@
 }
 
 .schedule{
-    background-color: #B2675E;
+    background-color: var(--secondary-color);
     width: 25vw; /* Adjust width to fit two items per row */
     height: 5vh;
     border-radius: 10px;
@@ -91,7 +91,7 @@
 }
 
 .previousWorkoutTitle{
-    color:#B2675E;
+    color:var(--secondary-color);
     font-family: "NTR", sans-serif;
     font-size: 1.5rem;
     text-align: center;
