--- a/src/app/profile/settings/settings.module.css
+++ b/src/app/profile/settings/settings.module.css
@@ -36,6 +36,7 @@
     font-size: 1.5rem;
     font-family: "NTR", sans-serif;
     color: #fff;
+    font-weight: 100;
     margin-bottom: 1rem;
 }
 
